--- a/src/styles/AboutUs.css
+++ b/src/styles/AboutUs.css
@@ -70,11 +70,11 @@
     border: 2px solid red;
 }
 .thirdAbout h1{
-    color: #036b1a;
+    color: var(--globalColor);
     font-size: 2.7em;
 }
 .thirdAbout button{
-    background: #036b1a;
+    background: var(--globalColor);
     border: 1px solid #000;
     width: 200px;
     height: 50px;
@@ -113,14 +113,14 @@
     gap: 15px;
 
     h2 span{
-        color: #036b1a;
+        color: var(--globalColor);
     }
     .lineRed{
         width: 400px;
         border: 2px solid red;
     }
     h1{
-        color: #036b1a;
+        color: var(--globalColor);
     }
 }
 .Expertise .describExper{
@@ -136,7 +136,7 @@
     button{
         width: 200px;
         padding: 15px 0;
-        background: #036b1a;
+        background: var(--globalColor);
         border: 1px solid #000;
         border-radius: 10px;
         font-weight: bold;
