--- a/src/styles/AvisUtilisateurs.css
+++ b/src/styles/AvisUtilisateurs.css
@@ -65,7 +65,7 @@
       gap: 20px;
       
       h2{
-        color: #036b1a;
+        color: var(--globalColor);
         font-weight: bold;
       }
 
@@ -94,7 +94,7 @@
         font-size: 4em;
 
         span{
-            color: #036b1a;
+            color: var(--globalColor);
         }
     }
     .lineRed{
