--- a/src/styles/FirstSection.css
+++ b/src/styles/FirstSection.css
@@ -17,7 +17,7 @@
     height: 135px;
 }
 .firstHeaderSection .consulting{
-    background: #036b1a;
+    background: var(--globalColor);
     display: flex;
     align-items: center;
     width: 35%;
@@ -43,7 +43,7 @@
     width: 0;
     height: 0;
     border-bottom: 135px solid transparent;
-    border-left: 100px solid #036b1a;
+    border-left: 100px solid var(--globalColor);
     margin-right: -100px;
     display: flex;
     align-items: center;
@@ -57,7 +57,7 @@
         background: #050024;
         padding: 5px;
         border-radius: 50%;
-        border: 6px solid #036b1a;
+        border: 6px solid var(--globalColor);
     }
 }
 .firstHeaderSection .callManage span{
@@ -80,15 +80,15 @@
         font-weight: bold;
 
         h2{
-            color: #05c72f;
+            color: var(--globalColor);
         }
     }
 
     a{
-        border: 2px solid #036b1a;
+        border: 2px solid var(--globalColor);
         border-radius: 10px;
         padding: 6px;
-        background: #036b1a;
+        background: var(--globalColor);
         display: flex;
         align-items: center;
         gap: 10px;
@@ -102,7 +102,7 @@
         padding: 0 10px;
     }
     a span{
-        background: #05c72f;
+        background: #3cb7ff;
         padding: 10px;
         border-radius: 7px;
         font-size: 1.2em;
@@ -110,7 +110,7 @@
 }
   .circle {
     border-radius: 50%;
-    box-shadow: 0px 0px 1px 1px #1dff30a1;
+    box-shadow: 0px 0px 1px 1px var(--globalColor);
   }
   
   .pulse {
@@ -119,7 +119,7 @@
   
   @keyframes pulse-animation {
     0% {
-      box-shadow: 0 0 0 0px rgba(39, 255, 57, 0.568);
+      box-shadow: 0 0 0 0px var(--globalColor)88;
     }
     100% {
       box-shadow: 0 0 0 20px rgba(21, 255, 0, 0);
