--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -32,15 +32,27 @@ nav{
     padding: 1.1rem 2.5rem;
 }
 .navbarContent .logo{
+    position: relative;
 
     h1{
         color: #000;
         font-size: 3em;
+
+        span{
+            background: var(--globalColor);
+            padding: 5px 10px;
+            border-radius: 15px;
+        }
     }
-    span{
-        background: #036b1a;
-        padding: 5px 10px;
-        border-radius: 15px;
+    .university{
+        position: absolute;
+        right: 0;
+        color: #000;
+        font-weight: bold;
+        font-size: 1.3em;
+        bottom: -13px;
+        letter-spacing: 5px;
+        border-bottom: 2px solid var(--globalColor);
     }
 }
 .navbarContent .navbarItems, .items{
@@ -62,7 +74,7 @@ nav{
     .item span{
         color: #000;
         font-size: 1.2em;
-        color: #036b1a;
+        color: #000;
         font-weight: bold;
     }
 }
@@ -75,10 +87,10 @@ nav{
     gap: 10px;
 
     a{
-        border: 2px solid #036b1a;
+        border: 2px solid var(--globalColor);
         border-radius: 10px;
         padding: 6px;
-        background: #036b1a;
+        background: var(--globalColor);
         display: flex;
         align-items: center;
         gap: 10px;
@@ -92,7 +104,7 @@ nav{
         padding: 0 10px;
     }
     span{
-        background: #05c72f;
+        background: #3cb7ff;
         padding: 10px;
         border-radius: 7px;
         font-size: 1.2em;
@@ -108,8 +120,9 @@ header section{
 header section .sectionContent{
     width: 100%;
     height: 75px;
-    background: #036b1a;
+    background: var(--globalColor);
     display: flex;
+    font-weight: bold;
 }
 .sectionContent .navbarLinks{
     width: 63.5%;
