--- a/src/styles/WhatWeOffer.css
+++ b/src/styles/WhatWeOffer.css
@@ -25,11 +25,11 @@
         font-size: 2.2em;
         
         span{
-        color: #036b1a;
+        color: var(--globalColor);
     }
 }
     button{
-        background: #036b1a;
+        background: var(--globalColor);
         border: 1px solid #000;
         padding: 15px 30px;
         color: #fff;
@@ -65,11 +65,11 @@
         color: #fff;
         border-radius: 10px;
         border: 1px solid #000;
-        background: #036b1a;
+        background: var(--globalColor);
     }
 
     h1{
-        color: #036b1a;
+        color: var(--globalColor);
         font-size: 2.5em;
         width: 60%;
     }
